# GeekBrains-Advanced

./: results.csv  results.json  results.pickle  users.json
Application/: forms.py  main.py  models.py
Application/env/: pyvenv.cfg
Application/instance/: database.db
Application/static/css/: utils.css
Application/templates/: 404.html  about.html  base.html  edit.html  footer.html  index.html  login.html  navbar.html  register.html  tasks.html  user.html  users.html
Flask & FastAPI/Lesson1/: application.py
Flask & FastAPI/Lesson1/templates/: index.html
Flask & FastAPI/Lesson2/: application.py
Flask & FastAPI/Lesson3/: application.py  models.py
HTML CSS/Lesson1/: index.html
HTML CSS/Lesson2/: index.html  style.css
HTML CSS/Lesson3/: index.html  style.css
PythonLearn/Encrypt/: Decryptor.py  Encrypt.py  pyproject.toml
PythonLearn/Lesson 1/: AutoTest1.py  Ex2.py
PythonLearn/Lesson1/: AutoTest1.py  AutoTest2.py  Ex1.py  Main.py
PythonLearn/Lesson10/: Animals.py  Circle.py  Employee.py  Person.py  Rectangle.py  Task1.py  Task2.py
PythonLearn/Lesson3/: circle_task.py  main.py  number_to_binary.py  quadratic_equations.py  type_variables.py
PythonLearn/Lesson4/: defs.py  functions.py  lambda_funcs.py
PythonLearn/Lesson5/: iterators_generators.py
PythonLearn/Lesson6/: import_module.py  imports.py  sercrets.py  xmodule.py
PythonLearn/Lesson7/: Filesystem.py  __init__.py  createInit.py  test.py
PythonLearn/Lesson8/: data.csv  data.json  data.txt  generate_datas.py  json_creator.py  json_to_csv.py  user_to_json.py
instance/: database.db
(+38 files in other folders)
