[tool.poetry]
name = "encrypt"
version = "0.1.0"
description = ""
authors = ["makesya <trademakesya@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyAesCrypt = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
